--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ django-widget-tweaks==1.4.9
 django-reversion==4.0.1
 django-allauth==0.50.0 #Django認証認可library
 django-model-utils==4.2.0 #
+django-pandas==0.6.6
