--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ django-reversion==4.0.1
 django-allauth==0.50.0 #Django認証認可library
 django-model-utils==4.2.0 #
 django-pandas==0.6.6
+django-dynamic-model==0.3.0
